# OracleMCP

./: mcp_server.py  pyproject.toml  requirements.txt
